# bashquest

./: .gitignore  Makefile  README.md  bashquest.cpp  bashquest.py  challenges.json  challenges.toml  pyproject.toml  state.py  utils.py
challenges/: absolute_paths.py  base.py  cat_file.py  cd_maze.py  cd_permissions.py  copy_file_in_same_directory.py  copy_file_to_dir.py  deepest_directory.py  echo_redirect_append_to_file.py  echo_redirect_append_two_lines.py  echo_redirect_single_word.py  echo_redirect_two_words.py  find_directory.py  grep_flag_across_files.py  grep_flag_line.py  largest_file.py  list_dir.py  ls_count_files.py  ls_wildcards_star.py  mkdir_nested_directories.py  mkdir_single_directory.py  move_file_into_directory.py  mv_rename_directory.py  mv_rename_file.py  pwd_absolute_path.py  relative_paths.py  rm_file_in_deepest_directory.py  rmdir_deepest_directory.py  rmdir_non_empty_deepest_directory.py  rmdir_three_nested_directories.py  tab_completion.py  wc_random.py
